--- a/index.html
+++ b/index.html
@@ -420,27 +420,27 @@
                                                     <div class="services_contact1">
                                                         <div class="contactname">
                                                             <span><i class="fa-regular fa-user icon1"></i></span>
-                                                            <span class="text1">
-                                                                <input type="text" placeholder="Name">
+                                                            <span>
+                                                                <input type="text" placeholder="Name" class="text1">
                                                             </span>
                                                         </div>
                                                         <div class="contactemail">
-                                                           <span><i class="fa-regular fa-envelope"></i></span> 
+                                                           <span><i class="fa-regular fa-envelope icon1"></i></span> 
                                                             <span>
-                                                                <input type="text" placeholder="E-mail">
+                                                                <input type="text" placeholder="E-mail" class="text1">
                                                             </span>
                                                         </div>
                                                     </div>
                                                     <div class="services_contact1">
                                                         <div class="contactlist">
-                                                           <span><i class="fa-solid fa-graduation-cap"></i></span> 
+                                                           <span><i class="fa-solid fa-graduation-cap icon1"></i></span> 
                                                             <span>
                                                                 <div class="service_select">
                                                                     <select name="course-list" id="" class="select">
-                                                                        <option value="English">English</option>
-                                                                        <option value="French">French</option>
-                                                                        <option value="Spanish">Spanish</option>
-                                                                        <option value="German">German</option>
+                                                                        <option value="English"  class="select1">English</option>
+                                                                        <option value="French" class="select1">French</option>
+                                                                        <option value="Spanish" class="select1">Spanish</option>
+                                                                        <option value="German" class="select1">German</option>
                                                                     </select>
                                                                 </div>
                                                             </span>
@@ -448,14 +448,14 @@
                                                     </div>
                                                     <div class="services_contact1">
                                                         <div class="contactmessage">
-                                                            <span class="icon"></span>
+                                                            <span ><i class="fa-regular fa-message icon1"></i></span>
                                                             <span class="textmessage">
-                                                                <textarea name="" id="" cols="40" rows="10" placeholder="Message"></textarea>
+                                                                <textarea name="" id="" cols="40" rows="10" placeholder="Message" class="textarea"></textarea>
                                                             </span>
                                                         </div>
                                                     </div>
                                                     <div class="services_btn">
-                                                        <input type="submit" class="submit">
+                                                        <input type="submit"  value="SEND" class="submit">
                                                     </div>
                                                 </div>
                                             </form>
@@ -471,10 +471,158 @@
             </div>
         </div>
         <div class="services2">
-            <img src="./asset/img/accent_bottom_wave_01.png" alt="">
+            <img src="./asset/img/accent_bottom_wave_01.png" alt="" class="services2_img">
         </div>
     </section>
-    <footer></footer>
+    <footer class="footer">
+        <div class="footer_container">
+            <div class="footer_container1">
+                <div class="footer_container2">
+                    <div class="row footer_row">
+                        <div class="col-xl-3">
+                            <div class="footer_content">
+                                <div class="footer_title">
+                                    <h5 class="title">
+                                        <span class="title1">
+                                            <span>Contact us</span>
+                                        </span>
+                                    </h5>
+                                </div>
+                                <div class="footer_checkin">
+                                    <span>
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <span> Franklin St, Greenpoint Ave</span>
+                                    </span>
+                                </div>
+                                <div class="footer_contact">
+                                    <span>
+                                        <i class="fa-solid fa-phone-flip"></i>
+                                        <span>+2342 5446 67</span>
+                                    </span>
+                                </div>
+                                <div class="footer_time">
+                                    <span>
+                                        <i class="fa-regular fa-clock"></i>
+                                        <span>Monday - Friday: 8 AM - 5 PM</span>
+                                    </span>
+                                </div>
+                                <div class="footer_icon">
+                                    <div class="footer_icon1">
+                                        <a href="#">
+                                            <i class="fa-brands fa-twitter"></i>
+                                        </a>
+                                    </div>
+                                    <div class="footer_icon1">
+                                        <a href="#">
+                                            <i class="fa-brands fa-instagram"></i>
+                                        </a>
+                                    </div>
+                                    <div class="footer_icon1">
+                                        <a href="#">
+                                            <i class="fa-brands fa-facebook-f"></i>
+                                        </a>
+                                    </div>
+                                    <div class="footer_icon1">
+                                        <a href="#">
+                                            <i class="fa-brands fa-youtube"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3">
+                            <div class="footer_content">
+                                <div class="footer_title">
+                                    <h5 class="title">
+                                        <span class="title1">
+                                            <span>Quick Links</span>
+                                        </span>
+                                    </h5>
+                                </div>
+                                <div class="footer_list">
+                                    <div class="footer_list1">
+                                        <ul class="menu">
+                                            <li class="menu_item">
+                                                <a href="#">Home</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Courses</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Schedule</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Blog</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3">
+                            <div class="footer_content">
+                                <div class="footer_title">
+                                    <h5 class="title">
+                                        <span class="title1">
+                                            <span>About</span>
+                                        </span>
+                                    </h5>
+                                </div>
+                                <div class="footer_list">
+                                    <div class="footer_list1">
+                                        <ul class="menu">
+                                            <li class="menu_item">
+                                                <a href="#">About Us</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Events</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Get Quote</a>
+                                            </li>
+                                            <li class="menu_item">
+                                                <a href="#">Contact</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3">
+                            <div class="footer_content">
+                                <div class="footer_title">
+                                    <h5 class="title">
+                                        <span class="title1">
+                                            <span>Newsletter</span>
+                                        </span>
+                                    </h5>
+                                </div>
+                                <div class="footer_form">
+                                    <div class="footer_form1">
+                                        <form action="" class="form">
+                                            <div class="formbtn">
+                                                <div class="btntop">
+                                                    <span class="btntop1">
+                                                        <input type="email" class="btnemail">
+                                                    </span>
+                                                </div>
+                                                <div class="btnbottom">
+                                                    <span class="btntop2">
+                                                        <input type="submit" class="btnsubmit">
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
