--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                     </h4>
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                                    <p>Lorem ipsum dolor consectetuer adipiscing elit.
                                     </p>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                                     </h4>
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Nanotechnology immersion  along the information............
+                                    <p>Nanotechnology  along the information
                                     </p>
                                 </div>
                             </div>
@@ -242,7 +242,7 @@
                                     </h4>
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Bring to the table win-win survival strategies to ensure.
+                                    <p>Bring to the table survival strategies to ensure.
 
                                     </p>
                                 </div>
@@ -269,7 +269,7 @@
 
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Proactive domination. At the end of the day, going forward.
+                                    <p>Proactive  At the end of the day, going forward.
 
                                     </p>
                                 </div>
