--- a/index.html
+++ b/index.html
@@ -43,31 +43,31 @@
                                 <a class="nav-link" href="#">Home</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link active  dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false" >About</a>
-                                <ul class="submenu dropdown-menu">
-                                    <li class="menuitem dropdown-item">
+                                <a class="nav-link active  dropdown-toggle">About</a>
+                                <ul class="submenu ">
+                                    <li class="menuitem">
                                         <a href="#" class="item1 item2">About Us</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">About Me</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">Our Team</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">History</a>
                                     </li>
 
-                                    <li class="menuitem dropdown-item" >
+                                    <li class="menuitem">
                                         <a href="#" class="item1">Testimonials</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">Contact</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">Coming Soon</a>
                                     </li>
-                                    <li class="menuitem dropdown-item">
+                                    <li class="menuitem">
                                         <a href="#" class="item1">404</a>
                                     </li>
                                 </ul>
@@ -125,6 +125,80 @@
             </div>
         </div>
     </header>
+    <section class="bg-primary ">
+        <div class="container">
+
+            <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-light navbar-offcanvas">
+                <a class="navbar-brand mr-auto" href="#"></a>
+
+
+
+
+                <button class="navbar-toggler d-block " type="button" id="navToggle">
+                    <span class="navbar-toggler-icon text-secondary"></span>
+                </button>
+
+                <div class="navbar-collapse offcanvas-collapse">
+                    <ul class="navbar-nav mr-auto ml-auto">
+                        <li class="nav-item">
+                            <a href="#" class="logo2">
+                                <img src="./asset/img/crest.png" alt="" id="img" class="img">
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown01"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdown01">
+                                <a class="dropdown-item" href="#">About Me</a>
+                                <a class="dropdown-item" href="#">Our Team</a>
+                                <a class="dropdown-item" href="#">History</a>
+                                <a class="dropdown-item" href="#">Testimonials</a>
+                                <a class="dropdown-item" href="#">Contact</a>
+                                <a class="dropdown-item" href="#">Coming Soon</a>
+                                <a class="dropdown-item" href="#">404</a>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="buttonlink nav-link">
+                                <div class="icon">
+                                    <i class="fa-solid fa-phone-flip"></i>
+                                </div>
+                                <span class="text">(+1) 555 234-8765</span>
+                            </a>
+                        </li>
+                        <li class="nav-item item1">
+                            <a class="nav-link" href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a class="nav-link" href="#">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                            <a class="nav-link" href="#"><i class="fa-brands fa-youtube"></i></a>
+                            <a class="nav-link" href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+
+        </div>
+
+
+    </section>
+
+
     <section class="carousel">
         <div class="carousel1 container">
             <div class="carousel_content">
@@ -218,7 +292,7 @@
                                     </h4>
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Nanotechnology  along the information
+                                    <p>Nanotechnology along the information
                                     </p>
                                 </div>
                             </div>
@@ -269,7 +343,7 @@
 
                                 </div>
                                 <div class="blog_text1">
-                                    <p>Proactive  At the end of the day, going forward.
+                                    <p>Proactive At the end of the day, going forward.
 
                                     </p>
                                 </div>
@@ -493,8 +567,7 @@
             <div class="footer_container1">
                 <div class="footer_container2">
                     <div class="row footer_row">
-                        <div
-                            class=" animate__animated wow animate__fadeIn animate__delay-1s col-lg-6 col-xl-3">
+                        <div class=" animate__animated wow animate__fadeIn animate__delay-1s col-lg-6 col-xl-3">
                             <div class="footer_content">
                                 <div class="footer_title">
                                     <h5 class="title">
@@ -549,8 +622,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div
-                            class="animate__animated wow animate__fadeIn animate__delay-2s  col-lg-6 col-xl-3">
+                        <div class="animate__animated wow animate__fadeIn animate__delay-2s  col-lg-6 col-xl-3">
                             <div class="footer_content">
                                 <div class="footer_title">
                                     <h5 class="title">
@@ -579,8 +651,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div
-                            class="animate__animated wow animate__fadeIn animate__delay-3s  col-lg-6 col-xl-3">
+                        <div class="animate__animated wow animate__fadeIn animate__delay-3s  col-lg-6 col-xl-3">
                             <div class="footer_content">
                                 <div class="footer_title">
                                     <h5 class="title">
@@ -609,8 +680,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div
-                            class="animate__animated wow animate__fadeIn animate__delay-4s  col-lg-6 col-xl-3">
+                        <div class="animate__animated wow animate__fadeIn animate__delay-4s  col-lg-6 col-xl-3">
                             <div class="footer_content">
                                 <div class="footer_title">
                                     <h5 class="title">
@@ -646,7 +716,7 @@
         </div>
 
     </footer>
-    <script>
+    <!-- <script>
         // When the user scrolls down 50px from the top of the document, resize the header's font size
         window.onscroll = function () { scrollFunction() };
 
@@ -665,7 +735,7 @@
 
             }
         }
-    </script>
+    </script> -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -678,6 +748,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+    <script src="./admin/main.js"></script>
 </body>
 
 </html>
